Updated form retrieval method for 'FEED' section. Need to fix list display and quickbuy image alignment

--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 
 body {
-  display: flex;
-  justify-content: center;
-  color: #fff;
-  height: 100%;
-  background-color: black;
-  position: relative;
+	display: flex;
+	justify-content: center;
+	color: #fff;
+	height: 100%;
+	background-color: black;
+	position: relative;
 }
 
 main{
 	
-	filter: blur(10px);
+	<!--filter: blur(10px);-->
 }
 
 header{
-  justify-content: center;
+
 }
 
 .columnHead{
@@ -23,6 +23,26 @@ header{
 	font-weight: bold;
 	text-align: center;
 	padding-bottom: 20px;
+}
+
+
+.productView{
+	display: inline-block;
+
+	
+}
+
+.productImage{
+	max-width: 100%;
+	max-height: 100%;
+	display: block;
+	margin: 0 auto;
+
+}
+.productImageFrame{
+	vertical-align: middle;
+	display: table-cell;
+	height: 100px;
 }
 
 .btn{
